Frontend: added user login and registration pages, trainer's page and redirections to the trainer's website from sports content. Backend: created custom registration endpoint with recording to the database and also created database with entity framework

--- a/Backend/SportCenterApi/appsettings.json
+++ b/Backend/SportCenterApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SportCenter": "Server=(localdb)\\mssqllocaldb;Database=DbSportCenter;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
