--- a/Frontend/SportCenterGui/package.json
+++ b/Frontend/SportCenterGui/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@react-spring/web": "^9.7.4",
+    "lodash": "^4.17.21",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0"
   }
 }
