--- a/Frontend/SportCenterGui/package.json
+++ b/Frontend/SportCenterGui/package.json
@@ -3,6 +3,9 @@
     "@react-spring/web": "^9.7.4",
     "lodash": "^4.17.21",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.0"
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-loading": "^2.0.3",
+    "react-router-dom": "^6.26.0",
+    "reactjs-popup": "^2.0.6"
   }
 }
